--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
         </ol>
       </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
