--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
       </div>
     </div>
     <script type="module" src="app.js"></script>
+    <script src="phrases.js"></script>
+
   </body>
 </html>
