Drafted functions for steps 5 & 6
Also removed phrases.js and put all javascript into app.js

--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
         </ol>
       </div>
     </div>
-    <script type="module" src="app.js"></script>
-    <script src="phrases.js"></script>
-
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
